--- a/MLDA_last_project.ipynb
+++ b/MLDA_last_project.ipynb
@@ -209,6 +209,43 @@
     "  plt.imshow(pixels)\n",
     "  plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "______________________________________________________________________________________________________________________________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=tPYj3fFJGjk\n",
+    "\n",
+    "https://www.youtube.com/watch?v=kOFUQB7u5Ck\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
